# rtc_fews_io

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
rtcfewsio/: __init__.py  rtcfewsio.py
src/rtc_fews_io/: __init__.py  mapping.py  mixin.py  parameters.py  timeseries.py
tests/: test_mapping_parameters.py  test_mixin.py  test_timeseries.py
