[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "rtc-fews-io"
version = "0.1.0"
description = "FEWS I/O helpers for RTC-Tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Deltares" },
]
dependencies = [
    "fewsxml>=0.2.1",
    "defusedxml>=0.7.0",
    "numpy>=1.23",
]
[project.optional-dependencies]
test = [
    "pytest>=7",
]
dev = [
    "pre-commit",
]
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.black]
line-length = 100
